# sthali-core

./: .gitignore  404.html  README.md  cookiecutter.json  index.html  pyproject.toml  search.html  sitemap.xml
.github/workflows/: build-upload-pypi.yml  deploy-docs.yml  deploy.yml  deps.yml  docs.yml  install-python-deps.yml  push-branch-main.yml  release.yml  run-deploy.yml  run-docs.yml  run-tests.yml  run-tests.yml.bkp  test-package.yml  tests.yml  trigger-deploy.yml  trigger-docs.yml  trigger-tests.yml
api/module_base/: index.html
api/module_enum_clients/: index.html
api/module_run_server/: index.html
docs/: mkdocs.yml
docs/docs/: LICENSE  index.md  installation.md  mkdocs.yml  requirements.md
docs/docs/api/: class_App.md  class_AppSpecification.md  class_Config.md  function_main.md  function_run.md  module_base.md  module_enum_clients.md  module_run_server.md
docs/site/: 404.html  index.html  search.html  sitemap.xml
docs/site/api/module_base/: index.html
docs/site/api/module_enum_clients/: index.html
docs/site/api/module_run_server/: index.html
docs/site/installation/: index.html
docs/site/license/: index.html
docs/site/requirements/: index.html
docs/site/search/: search_index.json
docs/site/usage/: index.html
github-actions/: install-python-deps.yml  tests.yml
installation/: index.html
license/: index.html
requirements/: index.html
search/: search_index.json
src/sthali_cli/: __init__.py  __main__.py  cli.py  generate_project.py
src/sthali_cli/scripts/: __init__.py  commons.py  generate_api_reference.py  generate_docs.py  generate_docstring.py  generate_project.py  generate_readme.py  generate_requirements.py
src/sthali_cli/templates/: requirements.md
src/sthali_core/: __init__.py
src/sthali_core/scripts/: __init__.py  commons.py  generate_licence.py  generate_project.py  generate_readme.py  generate_requirements.py  teste.py
src/sthali_core/scripts/docs/: __init__.py  generate_api_reference.py  generate_docstring.py  generate_index_file.py  generate_installation.py  generate_licence.py  generate_mkdocs.py  generate_readme.py  generate_requirements.py  generate_usage.py
src/sthali_core/scripts/project/: dependencies.json  generate_logo.py  generate_project.py  update_pyproject_dependencies.py
src/sthali_core/scripts/templates/: index.md
src/sthali_core/scripts/templates/cookiecutter/{{cookiecutter.project_name}}/.github/workflows/.github/workflows/: deps.yml  release.yml
src/sthali_core/utils/: base.py  enum_clients.py  run_server.py
teste/sthali-teste/: pyproject.toml
tests/utils/: test_base.py  test_enum_clients.py
usage/: index.html
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: deps.yml  docs.yml  release.yml  test-package.yml  trigger-deploy.yml  trigger-docs.yml  trigger-tests.yml
{{cookiecutter.project_name}}/docs/: mkdocs.yml
{{cookiecutter.project_name}}/docs/docs/: index.md  installation.md  release-notes.md  requirements.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: dependencies.py
