[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0",
]

[project]
name = "sthali-core"
version = "0.0.0.1"
authors = [
  { name = "Jhunu Fernandes", email = "jhunu.fernandes@gmail.com" },
]
description = "A core package for Sthali development"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "cookiecutter >= 2.6.0",
  "mkdocs >= 1.6.0",
  "PyYAML >= 6.0.2",
  "tomli >= 2.0.1",
  "typer >= 0.12.5",
]

[project.urls]
"Homepage" = "https://github.com/jhunufernandes/sthali-core"
"Bug Tracker" = "https://github.com/jhunufernandes/sthali-core/issues"

[project.optional-dependencies]
dev = [
  "coverage[toml] >= 7.6.1",
  "ruff >= 0.9.10",
]
tests = [
  "coverage[toml] >= 7.6.1",
]
stage = [
  "build >= 1.2.1",
  "coverage[toml] >= 7.6.1",
]

[project.scripts]
sthali_cli = "sthali_core:app"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "ANN401",  # any-type
  "TID252",  # relative-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "COM812",
  "D100",
  "D101",
  "D102",
  "D104",
  "D106",
  "PGH003",
  "PIE804",
  "PT009",
  "PT027",
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
