[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.0.1"
authors = [{ name = "Jhunu Fernandes", email = "jhunu.fernandes@gmail.com" }]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  # "Programming Language :: Python :: 3.11",
  # "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "fastapi >= 0.111.1",
  "pydantic >= 2.8.2",
]

[project.optional-dependencies]
dev = [
  "coverage[toml] >= 7.6.1",
  "ruff >= 0.5.2",
]
tests = [
  "coverage[toml] >= 7.6.1",
]
stage = [
  "build >= 1.2.1",
  "coverage[toml] >= 7.6.1",
]

[project.urls]
"Homepage" = "https://github.com/jhunufernandes/{{cookiecutter.project_name}}"
"Bug Tracker" = "https://github.com/jhunufernandes/{{cookiecutter.project_name}}/issues"

[tool.coverage.run]
branch = true
command_line = "-m unittest discover -v"

[tool.coverage.report]
omit = [
  "tests/*",
]
show_missing = true
exclude_lines = [
    "def _",
]
[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # any-type
  "TID252",  # relative-imports
  # "ANN002",  # missing-type-args
  # "ANN003",  # missing-type-kwargs
  # "ANN101",  # missing-type-self
  # "ANN102",  # missing-type-cls
  # "COM812",  # missing-trailing-comma
  # "ISC001",  # single-line-implicit-string-concatenation
  # "D107",  # undocumented-public-init
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "COM812",
  "D100",
  "D101",
  "D102",
  "D104",
  "D106",
  "PGH003",
  "PIE804",
  "PT009",
  "PT027",
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
