[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0",
]

[project]
name = "sthali-teste"
version = "0.0.0.1"
authors = [
  { name = "Jhunu Fernandes", email = "jhunu.fernandes@gmail.com" },
]
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "fastapi >= 0.115.13",
  "pydantic >= 2.11.7",
]

[project.urls]
"Homepage" = "https://github.com/project-sthali/sthali-teste"
"Bug Tracker" = "https://github.com/project-sthali/sthali-teste/issues"
"Source" = "https://github.com/project-sthali/sthali-teste"
"Documentation" = "https://project-sthali.github.io/sthali-teste"
"Changelog" = "https://github.com/project-sthali/sthali-teste/releases"

[project.optional-dependencies]
dev = [
  "coverage[toml] >= 7.9.1",
  "mkdocs >= 1.6.1",
  "ruff >= 0.12.0",
]
tests = [
  "coverage[toml] >= 7.9.1",
]
stage = [
  "build >= 1.2.1",
  "coverage[toml] >= 7.9.1",
  "mkdocs >= 1.6.1",
]

# [tool.coverage.run]
# branch = true
# command_line = "-m unittest discover -v"

# [tool.coverage.report]
# omit = [
#   "tests/*",
# ]
# show_missing = true
# exclude_lines = [
#     "def _",
# ]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "ANN401",  # any-type
  "N999",  # Invalid module name
  "PGH003",  # blanket-type-ignore
  "TID252",  # relative-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "COM812",  # missing-trailing-comma
  "D100",  # undocumented-public-module
  "D101",  # undocumented-public-class
  "D102",  # undocumented-public-method
  "D104",  # undocumented-public-package
  "D106",  # undocumented-public-nested-class
  "PIE804",  # unnecessary-dict-kwargs
  "PT009",  # pytest-unittest-assertion
  "PT027",  # pytest-unittest-raises-assertion
]

[tool.ruff.lint.pydocstyle]
convention = "google"
